--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button{
+  padding: 5px;
+  font-size: 1.3rem;
+  margin: 10px;
+  background-color: black;
+  color: white;
+  width: 50px;
+
+}
+
+p{
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.8rem;
+
 }
